fixup! align items removal line for firefox

--- a/css/yif.css
+++ b/css/yif.css
@@ -254,7 +254,6 @@ img.page-logo {
 }
 
 .video-timeline-description > i {
-    align-self: center;
     font-size: 30px;
     margin: 0 30px 0 10px;
     position: absolute;
